--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css" />
     <title>Calculator</title>
   </head>
   <body>
-    <div></div>
+    <div class="container">
+      <div class="tophalf">
+        <div class="display-container">
+          <p>123111</p>
+        </div>
+      </div>
+      <div class="bottomhalf">
+        <div class="buttons-container">
+          <div id="row1">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>C</button>
+          </div>
+          <div id="row2">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>x</button>
+          </div>
+          <div id="row3">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>-</button>
+          </div>
+          <div id="row4">
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
+            <button>+</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
