--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
       <div class="bottomhalf">
         <div class="buttons-container">
           <div id="row1">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button class="numbers">7</button>
+            <button class="numbers">8</button>
+            <button class="numbers">9</button>
             <button>C</button>
           </div>
           <div id="row2">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+            <button class="numbers">4</button>
+            <button class="numbers">5</button>
+            <button class="numbers">6</button>
             <button>x</button>
           </div>
           <div id="row3">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+            <button class="numbers">1</button>
+            <button class="numbers">2</button>
+            <button class="numbers">3</button>
             <button>-</button>
           </div>
           <div id="row4">
-            <button>0</button>
+            <button class="numbers">0</button>
             <button>.</button>
             <button>=</button>
             <button>+</button>
