--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             <button class="numbers">4</button>
             <button class="numbers">5</button>
             <button class="numbers">6</button>
-            <button>x</button>
+            <button class="operators">x</button>
           </div>
           <div id="row3">
             <button class="numbers">1</button>
             <button class="numbers">2</button>
             <button class="numbers">3</button>
-            <button>-</button>
+            <button class="operators">-</button>
           </div>
           <div id="row4">
             <button class="numbers">0</button>
             <button>.</button>
             <button>=</button>
-            <button>+</button>
+            <button class="operators">+</button>
           </div>
         </div>
       </div>
