Define Display Value

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="tophalf">
         <div class="display-container">
-          <p>123111</p>
+          <p id="display-value">0</p>
         </div>
       </div>
       <div class="bottomhalf">
